--- a/src/main/resources/templates/project/recruit_detail.html
+++ b/src/main/resources/templates/project/recruit_detail.html
@@ -200,7 +200,7 @@
       </div>
       <button class="right-btn apply"
               th:if="${ session.loginMember!=null && session.loginMember.getId()!= project.getOwnerId()}"
-              th:onclick="|projectJoin(${session.loginMember?.getId()})|"
+              th:onclick="|projectJoin(${project.getId()})|"
       >프로젝트 참여 신청
       </button>
       <!-- TODO : 북마크버튼 클릭 시 로그인한 유저가아니면 이동시켜야함 -->
@@ -265,33 +265,61 @@
 </footer>
 <script>
     // 프로젝트 참여신청
-    function projectJoin(){
+    function projectJoin(projectId){
         // 현재 로그인한 유저의 ID
         let loginMemberId = document.querySelector(".loginMember").textContent;
+        let logicCheck = -1;
 
-        // 신청자목록에서 ID를 담을 배열
-        let idList = [];
-
-        document.querySelectorAll(".member-id-list").forEach(id=>{
-            idList.push(id.textContent);
-        })
-
-        idList.forEach((id)=>{
-            if(loginMemberId==id) {
-                // 신청했었다면 알림창 띄우고 함수종료
-                alert("이미 신청하셨습니다!");
-                return;
-            }
+        // 신청자 목록에서 로그인한 멤버가 있다면 alert() 출력 후 함수 종료
+        document.querySelectorAll(".member-id-list").forEach(item=>{
+            if(item.textContent === loginMemberId)
+                logicCheck = 1;
         });
-        // 신청한 유저가 아니면 아래 로직이 실행됨.
-        $.ajax({
 
-        })
+        if(logicCheck == 1)
+            alert("이미 신청하셨습니다 !");
+        else{
+            // 신청한 유저가 아니면 아래 로직이 실행됨.
+            $.ajax({
+                type:"POST",
+                url: "/api/project/join",
+                contentType: "application/x-www-form-urlencoded; charset=utr-8",
+                data: {"memberId":loginMemberId, "projectId":projectId},
+                dataType: "json"
+            }).done(res=>{
+                console.log("통신성공!", res);
+                let career;
 
+                if(res.data.career == '1') carrer='학생/취준생';
+                else if(res.data.career == '2') carrer='신입';
+                else if(res.data.career == '3') carrer='1~3년차';
+                else if(res.data.career == '4') carrer='3~5년차';
+                else if(res.data.career == '1') carrer='5년이상';
+                let item =
+                    `
+                    <div class='application-box'>
+                      <div class="profile-top">
+                        <div style="display: none;" class="member-id-list">${res.data.id}</div>
+                        <img src="/img/profile_sample.png" alt="프로필이미지">
+                        <div>
+                          <span class="work" >${res.data.position}</span>
+                          <span class="work" th:text="${career}">프론트엔드</span>
+                          <h3>${res.data.username}</h3>
+                        </div>
+                      </div>
+                      <p class="app-date">${res.data.createdAt}</p>
+                    </div>
+                    `;
 
+                $('.app-wrap').append(item);
+            }).fail(error=>{
+                console.log("통신실패!", error);
+            });
+        }
     }
 
     // 프로젝트 삭제
+    // TODO : URL 변경 필요함(URL에 정보 노출 X)
     function deleteProject(projectId) {
         $.ajax({
             type: "DELETE",
@@ -308,6 +336,7 @@
     }
 
     // 멤버추가버튼
+    // TODO : URL 변경 필요(URL에 정보 노출 X)
     function memberInvite(memberId) {
         console.log(memberId);
         $.ajax({
@@ -323,7 +352,6 @@
 
     // 프로젝트 모집완료
     function recruitDone(projectId) {
-
         console.log(projectId);
         $.ajax({
             type: "patch",
