--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -27,6 +27,7 @@
   <div class="wrap">
     <div class="profile-container">
       <div class="profile-section">
+        <h2 th:text="${member.getProfileImage()}"></h2>
         <a th:href="@{/member/edit/{memberId}(memberId=${member.getId()})}" class="edit-btn">마이페이지 수정</a>
         <a href="#" class="img-wrap">
           <img th:src="@{/img/cinnamoroll.jpeg}" alt="Profile Image" class="profile-image">
