[#71]사용자 프로필 이미지 구현
1. 메인페이지, 프로젝트 상세, 프로젝트 자랑 상세, 사용자 정보 화면에 사용자 프로필 로드
2. 헤더 레이아웃 사용자 프로필 제거

resolved:#71]

--- a/src/main/resources/templates/member/mypage_edit.html
+++ b/src/main/resources/templates/member/mypage_edit.html
@@ -32,7 +32,7 @@
   <div class="wrap">
     <div class="edit-section">
       <div class="profile-img">
-        <img id="profileImage" th:src="@{/img/cinnamoroll.jpeg}" alt="Profile Image" style="cursor: pointer;">
+        <img id="profileImage" th:src="@{/upload/{url}(url=${member.getProfileImage()})}" alt="Profile Image" style="cursor: pointer;">
         <input type="file" id="fileInput" style="display: none;" accept="image/*"/>
       </div>
       <div class="form-container">
