--- a/src/main/resources/templates/project/recruit_detail.html
+++ b/src/main/resources/templates/project/recruit_detail.html
@@ -165,7 +165,7 @@
           <div class="application-box" th:each="member : ${project.getMembers()}">
             <div class="profile-top">
               <div style="display: none;" class="member-id-list" th:text="${member.getId()}"></div>
-              <img th:src="@{/upload/{img}(img=${member.getPr})" alt="프로필이미지">
+              <img th:src="@{/upload/{img}(img=${member.getProfileImageUrl()})}" alt="프로필이미지">
               <div>
                 <span class="work" th:text="${member.getPosition()}">프론트엔드</span>
                 <span class="career" th:if="${member.getCareer() == 1}">학생/취준생</span>
@@ -188,7 +188,7 @@
     </div>
     <div class="right-box">
       <div class="profile-box">
-        <img th:src="@{/img/profile_sample.png}" alt="프로필이미지">
+        <img th:src="@{/upload/{img}(img=${project.getOwnerInfo().getProfileImageUrl()})}" alt="프로필이미지">
         <div class="right-tag">
           <span class="work right" th:text="${project.getOwnerInfo().getPosition()}">백엔드</span>
           <span class="career right" th:if="${project.getOwnerInfo().getCareer() ==1}">신입/취준생</span>
@@ -295,20 +295,20 @@
                 console.log("통신성공!", res);
                 let career;
 
-                if (res.data.career == '1') carrer = '학생/취준생';
-                else if (res.data.career == '2') carrer = '신입';
-                else if (res.data.career == '3') carrer = '1~3년차';
-                else if (res.data.career == '4') carrer = '3~5년차';
-                else if (res.data.career == '1') carrer = '5년이상';
+                if (res.data.career == '1') res.data.career = '학생/취준생';
+                else if (res.data.career == '2') res.data.career = '신입';
+                else if (res.data.career == '3') res.data.career = '1~3년차';
+                else if (res.data.career == '4') res.data.career = '3~5년차';
+                else if (res.data.career == '5') res.data.career = '5년이상';
                 let item =
                     `
                     <div class='application-box'>
                       <div class="profile-top">
                         <div style="display: none;" class="member-id-list">${res.data.id}</div>
-                        <img src="/img/profile_sample.png" alt="프로필이미지">
+                        <img src="/upload/${res.data.profileImageUrl}" alt="프로필이미지">
                         <div>
-                          <span class="work" >${res.data.position}</span>
-                          <span class="work" th:text="${career}">프론트엔드</span>
+                          <span class="work">${res.data.position}</span>
+                          <span class="career">${res.data.career}</span>
                           <h3>${res.data.username}</h3>
                         </div>
                       </div>
