--- a/src/main/resources/templates/project/show_detail.html
+++ b/src/main/resources/templates/project/show_detail.html
@@ -148,17 +148,25 @@
         </div>
         <h3 th:text="${showDetail.getOwnerInfo().getUsername()}">👑 이윤지</h3>
       </div>
-      <!-- 북마크 안했을때 -->
-      <button th:if="${isBookmark == 0}" style="border: 1px solid var(--main-color); color: var(--main-color); background-color: white;"
-              class="right-btn keep" th:onclick="|projectBookmark(${showDetail.getId()})|">
-        <i class="fa-regular fa-bookmark" style="color: var(--main-color);"></i>북마크
-      </button>
-      <!-- 북마크 했을때 -->
-      <button th:if="${isBookmark == 1}" style="border: 1px solid var(--main-color); color: white; background-color: var(--main-color);"
-              class="right-btn keep" th:onclick="|projectBookmark(${showDetail.getId()})|">
-        <i class="fa-regular fa-bookmark" style="color: white;"></i>북마크
-      </button>
-
+      <th:block th:if="${session.loginMember == null}">
+        <!-- 북마크 안했을때 -->
+        <button style="border: 1px solid var(--main-color); color: var(--main-color); background-color: white;"
+                class="right-btn keep" th:onclick="|projectBookmark(${showDetail.getId()})|">
+          <i class="fa-regular fa-bookmark" style="color: var(--main-color);"></i>북마크
+        </button>
+      </th:block>
+      <th:block th:if="${session.loginMember != null}">
+        <!-- 북마크 안했을때 -->
+        <button th:if="${isBookmark == 0}" style="border: 1px solid var(--main-color); color: var(--main-color); background-color: white;"
+                class="right-btn keep" th:onclick="|projectBookmark(${showDetail.getId()})|">
+          <i class="fa-regular fa-bookmark" style="color: var(--main-color);"></i>북마크
+        </button>
+        <!-- 북마크 했을때 -->
+        <button th:if="${isBookmark == 1}" style="border: 1px solid var(--main-color); color: white; background-color: var(--main-color);"
+                class="right-btn keep" th:onclick="|projectBookmark(${showDetail.getId()})|">
+          <i class="fa-regular fa-bookmark" style="color: white;"></i>북마크
+        </button>
+      </th:block>
       <th:block th:if="${showDetail.getGithubLink() == null}"><a style="display:none;" th:href="@{/{github}(github=${showDetail.getGithubLink()})}"><button class="right-btn github"><i class="fa-brands fa-github"></i>깃허브</button></a></th:block>
       <th:block th:if="${showDetail.getGithubLink() != null}"><a th:href="@{/{github}(github=${showDetail.getGithubLink()})}"><button class="right-btn github"><i class="fa-brands fa-github"></i>깃허브</button></a></th:block>
       <div class="edit-btn" th:if="${session.loginMember != null && session.loginMember.getId()==showDetail.getOwnerId()}">
