프로젝트 모집상세 셀렉트 필터

--- a/src/main/resources/templates/project/recruit_list.html
+++ b/src/main/resources/templates/project/recruit_list.html
@@ -36,8 +36,8 @@
     <h1>📃 카테고리</h1>
     <ul>
       <li id="all" class="on"><a href="#">전체</a></li>
-      <li id="frontend"><a href="#" onclick="projectFilterFront()" >프론트엔드</a></li>
-      <li id="backend"><a href="#" onclick="projectFilterBack()" >백엔드</a></li>
+      <li id="frontend"><a href="#" onclick="projectFilterFront()">프론트엔드</a></li>
+      <li id="backend"><a href="#" onclick="projectFilterBack()">백엔드</a></li>
       <li id="design"><a href="#" onclick="projectFilterDesign()">디자인</a></li>
       <li id="manager"><a href="#" onclick="projectFilterManager()">기획</a></li>
       <li id="etc"><a href="#" onclick="projectFilterEtc()">기타</a></li>
@@ -59,10 +59,10 @@
           <li><a href="">스터디/모임</a></li>
         </ul>
       </div>
-      <select class="select">
-        <option value="all">전체 모집 글</option>
-        <option value="ing">모집 중</option>
-        <option value="done">모집 완료</option>
+      <select class="select" onchange="handleSelectFilter(event)">
+        <option value="all" onclick="selectFilter()">전체 모집 글</option>
+        <option value="1" onclick="selectFilter()">모집 중</option>
+        <option value="0" onclick="selectFilter()">모집 완료</option>
       </select>
     </div>
 
@@ -116,19 +116,67 @@
         }
     }
 
+    // 셀렉트 필터(전체모집글, 모집중, 모집완료)
+    function handleSelectFilter(event) {
+        // 전체모집글 : all, 모집중 : 0 , 모집완료 : 1
+        let selectedValue = event.target.value;
+
+        if (selectedValue == 'all')
+            window.location.reload();
+        else {
+            $.ajax({
+                url: `api/project/select/${selectedValue}`,
+                type: "get",
+                dataType: "json"
+            }).done(res => {
+                console.log("성공", res);
+                $('.lists').empty();
+                if (res.data.length === 0) {
+                    $('.lists').append('<p class="search-null">프로젝트가 존재하지 않습니다. 다시 검색해주세요.</p>');
+                } else {
+                    // 새로운 프로젝트 리스트를 추가합니다.
+                    res.data.forEach(project => {
+                        $('.lists').append(`
+              <a href="/project/${project.id}" class="project-box">
+                <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
+                <p class="title">
+                  <strong class="state-ing">${project.status == 1 ? '모집 중' : '모집완료'}</strong>
+                  <span>${project.projectName}</span>
+                </p>
+                <div class="cont-wrap">
+                  <p class="content">${project.projectInfo}</p>
+                </div>
+                <ul class="pj-work">
+                  ${project.roleNames.map(role => `<li>${role}</li>`).join('')}
+                </ul>
+                <ul class="count">
+                  <li>${project.createTime}</li>
+                  <li><i class="fa-regular fa-hand"></i> ${project.subscribe}명</li>
+                  <li><i class="fa-solid fa-eye"></i> ${project.views}회</li>
+                </ul>
+              </a>
+            `);
+                    });
+                }
+            }).fail(error => {
+                console.log("실패", error);
+            });
+        }
+    }
+
     // 카테고리 전체 클릭 시
-    document.querySelector('#all').addEventListener("click", function (){
-       window.location.reload();
+    document.querySelector('#all').addEventListener("click", function () {
+        window.location.reload();
     });
 
     // 프론트 필터
-    function projectFilterFront(){
+    function projectFilterFront() {
         $.ajax({
             type: "POST",
             url: "/api/project/filter",
             contentType: "application/x-www-form-urlencoded; charset=utr-8",
-            data: {"filter":"프론트엔드"}
-        }).done(res=>{
+            data: {"filter": "프론트엔드"}
+        }).done(res => {
             console.log("성공", res);
             $('.lists').empty();
 
@@ -166,20 +214,20 @@
             `);
                 });
             }
-        }).fail(error=>{
+        }).fail(error => {
             console.log("실패", error);
         })
     }
 
 
     // 백 필터
-    function projectFilterBack(){
+    function projectFilterBack() {
         $.ajax({
             type: "POST",
             url: "/api/project/filter",
             contentType: "application/x-www-form-urlencoded; charset=utr-8",
-            data: {"filter":"백엔드"}
-        }).done(res=>{
+            data: {"filter": "백엔드"}
+        }).done(res => {
             console.log("성공", res);
             $('.lists').empty();
 
@@ -217,19 +265,19 @@
             `);
                 });
             }
-        }).fail(error=>{
+        }).fail(error => {
             console.log("실패", error);
         })
     }
 
     // 디자이너 필터
-    function projectFilterDesign(){
+    function projectFilterDesign() {
         $.ajax({
             type: "POST",
             url: "/api/project/filter",
             contentType: "application/x-www-form-urlencoded; charset=utr-8",
-            data: {"filter":"디자이너"}
-        }).done(res=>{
+            data: {"filter": "디자이너"}
+        }).done(res => {
             console.log("성공", res);
             $('.lists').empty();
 
@@ -267,19 +315,19 @@
             `);
                 });
             }
-        }).fail(error=>{
+        }).fail(error => {
             console.log("실패", error);
         })
     }
 
     // 기획 필터
-    function projectFilterManager(){
+    function projectFilterManager() {
         $.ajax({
             type: "POST",
             url: "/api/project/filter",
             contentType: "application/x-www-form-urlencoded; charset=utr-8",
-            data: {"filter":"기획"}
-        }).done(res=>{
+            data: {"filter": "기획"}
+        }).done(res => {
             console.log("성공", res);
             $('.lists').empty();
 
@@ -317,19 +365,19 @@
             `);
                 });
             }
-        }).fail(error=>{
+        }).fail(error => {
             console.log("실패", error);
         })
     }
 
     // 기타 필터
-    function projectFilterEtc(){
+    function projectFilterEtc() {
         $.ajax({
             type: "POST",
             url: "/api/project/filter",
             contentType: "application/x-www-form-urlencoded; charset=utr-8",
-            data: {"filter":"기타"}
-        }).done(res=>{
+            data: {"filter": "기타"}
+        }).done(res => {
             console.log("성공", res);
             $('.lists').empty();
 
@@ -367,7 +415,7 @@
             `);
                 });
             }
-        }).fail(error=>{
+        }).fail(error => {
             console.log("실패", error);
         })
     }
