--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -217,7 +217,10 @@
   position: relative;
   font-size: 1.25rem;
   font-weight: 700;
-  padding-right: 20px;
+  padding-right: 12px;
+  border-right: 1px solid var(--border-color);
+  margin-right: 11px;
+  line-height: 0.8rem;
 }
 
 /*.project-box strong.state-ing:before {*/
@@ -228,15 +231,6 @@
 /*  color: var(--gray-font);*/
 /*  font-weight: 400;*/
 /*}*/
-
-.project-box strong.state-done:before {
-  content: "|";
-  position: absolute;
-  top: 2px;
-  left: 82px;
-  color: var(--gray-font);
-  font-weight: 400;
-}
 
 .project-box strong.state-ing {
   color: var(--main-color);
@@ -255,6 +249,7 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
   margin-bottom: 17px;
+  min-height:58px;
 }
 
 .project-box b {
