--- a/src/main/resources/templates/project/recruit_list.html
+++ b/src/main/resources/templates/project/recruit_list.html
@@ -517,64 +517,63 @@
     }
 
     function searchProjects() {
-        let keyword = document.querySelector(".recruit-ipt").value;
-        $.ajax({
-            url: "/api/project/search",
-            type: "GET",
-            data: {"keyword": keyword},
-            success: function (response) {
-                // 기존 프로젝트 리스트를 비웁니다.
-                $('.lists').empty();
-                // 검색 결과가 없을 때 메시지 표시
-                if (response.data.length === 0) {
-                    $('.lists').append('<p class="search-null">프로젝트가 존재하지 않습니다. 다시 검색해주세요.</p>');
-                } else {
-                    // 새로운 프로젝트 리스트를 추가합니다.
-                    response.data.forEach(project => {
-                        $('.lists').append(`
-              <a href="/project/${project.id}" class="project-box">
-                <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
-                <p class="title">
-                  <strong class="state-ing">${project.status == 1 ? '모집 중' : '모집완료'}</strong>
-                  <span>${project.projectName}</span>
-                </p>
-                <div class="cont-wrap">
-                  <p class="content">${project.projectInfo}</p>
-                </div>
-                <ul class="pj-work">
-                  ${project.roleNames.map(role => `<li>${role}</li>`).join('')}
-                </ul>
-                <ul class="count">
-                  <li>${project.createTime}</li>
-                  <li><i class="fa-regular fa-hand"></i> ${project.subscribe}명</li>
-                  <li><i class="fa-solid fa-eye"></i> ${project.views}회</li>
-                </ul>
-              </a>
-            `);
-                    });
-                }
-            },
-            error: function (error) {
-                console.log("Error: ", error);
-            }
-        });
+      let keyword = document.querySelector(".recruit-ipt").value;
+      $.ajax({
+        url: "/api/project/search",
+        type: "GET",
+        data: { "keyword": keyword },
+        success: function (response) {
+          // 기존 프로젝트 리스트를 비웁니다.
+          $('.lists').empty();
+          // 검색 결과가 없을 때 메시지 표시
+          if (response.data.length === 0) {
+            $('.lists').append('<p class="search-null">프로젝트가 존재하지 않습니다. 다시 검색해주세요.</p>');
+          } else {
+            // 새로운 프로젝트 리스트를 추가합니다.
+            response.data.forEach(project => {
+              $('.lists').append(`
+                        <a href="/project/${project.id}" class="project-box">
+                            <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
+                            <p class="title">
+                                <strong class="${project.status == 1 ? 'state-ing' : 'state-done'}">${project.status == 1 ? '모집 중' : '모집완료'}</strong>
+                                <span class="title">${project.projectName}</span>
+                            </p>
+                            <div class="cont-wrap">
+                                <p class="content">${project.projectInfo}</p>
+                            </div>
+                            <ul class="pj-work">
+                                ${project.roleNames.map(role => `<li>${role}</li>`).join('')}
+                            </ul>
+                            <ul class="count">
+                                <li>${project.createTime}</li>
+                                <li><i class="fa-regular fa-hand"></i> ${project.subscribe}명</li>
+                                <li><i class="fa-solid fa-eye"></i> ${project.views}회</li>
+                            </ul>
+                        </a>
+                    `);
+            });
+          }
+        },
+        error: function (error) {
+          console.log("Error: ", error);
+        }
+      });
     }
 
     function clearSearch() {
-        document.querySelector(".recruit-ipt").value = '';
-        searchProjects(); // 검색어를 비운 상태로 searchProjects 호출
+      document.querySelector(".recruit-ipt").value = '';
+      searchProjects(); // 검색어를 비운 상태로 searchProjects 호출
     }
 
-    function handleKeyDown(event) {
-        if (event.key === 'Enter') {
-            searchProjects();
-        }
+    function handleInput() {
+      searchProjects();
     }
 
-    document.querySelector(".recruit-ipt").addEventListener("keydown", handleKeyDown);
+    document.querySelector(".recruit-ipt").addEventListener("input", handleInput);
 
     // 페이지 로드 시 전체 프로젝트 로드
     window.onload = searchProjects;
+
 </script>
 
 </html>
