--- a/src/main/resources/templates/project/recruit_list.html
+++ b/src/main/resources/templates/project/recruit_list.html
@@ -69,18 +69,14 @@
     <div class="lists">
       <a th:href="@{/project/{project}(project=${project.getId()})}" th:each="project : ${allProject}" class="project-box">
         <span class="pj-type" th:classappend="${project.getProjectType() == '사이드 프로젝트'? 'pj' : 'study'}" th:text="${project.getProjectType()}"></span>
-        <p class="title">
-          <strong class="state-ing" th:text="${project.getStatus() == 1 ? '모집 중' : '모집완료' }">모집 중</strong>
-          <span th:text="${project.getProjectName()}">엘리스 SW 4기 모집합니다!</span>
+        <p th:class="title">
+          <strong th:classappend="${project.status == 1 ? 'state-ing' : 'state-done'}" th:text="${project.status == 1 ? '모집 중' : '모집완료'}"></strong>
+          <span th:classappend="project-name" th:text="${project.getProjectName()}">엘리스 SW 4기 모집합니다!</span>
         </p>
         <div class="cont-wrap">
-          <p class="content" th:text="${project.getProjectInfo()}">
+          <p class="content" th:utext="${#strings.replace(project.getProjectInfo(), '\n', '<br/>')}">
             열심히 코딩해서 멋진 개발자가 인재들을 모집합니다.열심히
-            코딩해서 멋진 개발자가 인재 들을 모집합니다.열심히 코딩해서 멋진
-            개발자가 인재들을 모집합니다.열심히 코딩해서 멋진 개발자가
-            인재들을 모집합니다.열심히 코딩해서 멋진 개발자가 인재들을
-            모집합니다.열심히 코딩해서 멋진 개발자가 인재들을
-            모집합니다.열심히 코딩해서 멋진 개발자가 인재들을 모집합니다.
+            코딩해서 멋진 개발자가 인재 들을 모집합니다.
           </p>
         </div>
         <ul class="pj-work">
@@ -143,7 +139,7 @@
                 <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
                 <p class="title">
                   <strong class="state-ing">${project.status == 1 ? '모집 중' : '모집완료'}</strong>
-                  <span>${project.projectName}</span>
+                   <span th:classappend="project-name" th:text="${project.getProjectName()}">엘리스 SW 4기 모집합니다!</span>
                 </p>
                 <div class="cont-wrap">
                   <p class="content">${project.projectInfo}</p>
@@ -186,7 +182,7 @@
                 <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
                 <p class="title">
                   <strong class="state-ing">${project.status == 1 ? '모집 중' : '모집완료'}</strong>
-                  <span>${project.projectName}</span>
+                   <span th:classappend="project-name" th:text="${project.getProjectName()}">엘리스 SW 4기 모집합니다!</span>
                 </p>
                 <div class="cont-wrap">
                   <p class="content">${project.projectInfo}</p>
@@ -237,7 +233,7 @@
                 <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
                 <p class="title">
                   <strong class="state-ing">${project.status == 1 ? '모집 중' : '모집완료'}</strong>
-                  <span>${project.projectName}</span>
+                   <span th:classappend="project-name" th:text="${project.getProjectName()}">엘리스 SW 4기 모집합니다!</span>
                 </p>
                 <div class="cont-wrap">
                   <p class="content">${project.projectInfo}</p>
@@ -293,7 +289,7 @@
                 <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
                 <p class="title">
                   <strong class="state-ing">${project.status == 1 ? '모집 중' : '모집완료'}</strong>
-                  <span>${project.projectName}</span>
+                   <span th:classappend="project-name" th:text="${project.getProjectName()}">엘리스 SW 4기 모집합니다!</span>
                 </p>
                 <div class="cont-wrap">
                   <p class="content">${project.projectInfo}</p>
@@ -344,7 +340,7 @@
                 <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
                 <p class="title">
                   <strong class="state-ing">${project.status == 1 ? '모집 중' : '모집완료'}</strong>
-                  <span>${project.projectName}</span>
+                   <span th:classappend="project-name" th:text="${project.getProjectName()}">엘리스 SW 4기 모집합니다!</span>
                 </p>
                 <div class="cont-wrap">
                   <p class="content">${project.projectInfo}</p>
@@ -394,7 +390,7 @@
                 <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
                 <p class="title">
                   <strong class="state-ing">${project.status == 1 ? '모집 중' : '모집완료'}</strong>
-                  <span>${project.projectName}</span>
+                   <span th:classappend="project-name" th:text="${project.getProjectName()}">엘리스 SW 4기 모집합니다!</span>
                 </p>
                 <div class="cont-wrap">
                   <p class="content">${project.projectInfo}</p>
@@ -444,7 +440,7 @@
                 <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
                 <p class="title">
                   <strong class="state-ing">${project.status == 1 ? '모집 중' : '모집완료'}</strong>
-                  <span>${project.projectName}</span>
+                   <span th:classappend="project-name" th:text="${project.getProjectName()}">엘리스 SW 4기 모집합니다!</span>
                 </p>
                 <div class="cont-wrap">
                   <p class="content">${project.projectInfo}</p>
@@ -494,10 +490,10 @@
                 <span class="pj-type ${project.projectType == '사이드 프로젝트' ? 'pj' : 'study'}">${project.projectType}</span>
                 <p class="title">
                   <strong class="state-ing">${project.status == 1 ? '모집 중' : '모집완료'}</strong>
-                  <span>${project.projectName}</span>
+                   <span th:classappend="project-name" th:text="${project.getProjectName()}">엘리스 SW 4기 모집합니다!</span>
                 </p>
                 <div class="cont-wrap">
-                  <p class="content">${project.projectInfo}</p>
+                  <p class="content"></p>
                 </div>
                 <ul class="pj-work">
                   ${project.roleNames.map(role => `<li>${role}</li>`).join('')}
