--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -207,8 +207,12 @@
   border-radius: 3px;
 }
 
-.project-box .title {
-  padding: 12px 0 17px;
+.project-box .title{
+  padding-top:12px;
+}
+
+.project-box .project-name {
+  padding: 0 0 17px;
   font-size: 1.25rem;
   font-weight: 600;
 }
@@ -248,7 +252,7 @@
   overflow: hidden;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
-  margin-bottom: 17px;
+  margin: 17px 0;
   min-height:58px;
 }
 
